@@ -1,6 +1,7 @@
 language: python
 python:
   - "2.7"
+  - "3.2"
   - "3.3"
 # command to install dependencies
 install:
